# franka_ws

./: .gitignore  .gitmodules  LIBFRANKA_SETUP.md  PACKAGE_RENAME_SUMMARY.md  README.md  SLIDE_ALONG_CABLE_SUMMARY.md  demo_cameras.sh  demo_shear_force.py  demo_tactile_detection.sh  pre_push_check.sh  start.txt  test_basic_connection.py  test_gelsight_detection.py  test_libfranka_direct.py  test_robot_communication.py
src/franka_communication/: CMakeLists.txt
src/franka_position_reader_cpp/: CMakeLists.txt
src/franka_position_reader_cpp/src/: franka_position_reader.cpp
src/gelsight_camera/: CMakeLists.txt  README.md  README_SlideAlongCable.md  package.xml
src/gelsight_camera/config/: admittance_params.yaml  gelsight_params.yaml  slide_along_cable_params.yaml  tactile_sensor_params.yaml
src/gelsight_camera/launch/: cable_tension_control.launch.py  gelsight_camera.launch.py  gelsight_tactile_system.launch.py  slide_along_cable.launch.py  slide_demo.launch.py
src/gelsight_camera/src/: admittance_controller.cpp  tactile_sensor_node.cpp
src/gelsight_camera/srv/: StartSlideAlongCable.srv  StopSlideAlongCable.srv
src/tension_control/: CMakeLists.txt  README_tactile_detection.md  package.xml
src/tension_control/action/: SlideAlongCable.action
src/tension_control/config/: integrated_system_params.yaml  tactile_detection_params.yaml
src/tension_control/launch/: cable_tension_control.launch.py  camera_demo.launch.xml  gelsight_camera.launch.py  gelsight_debug.launch.xml  gelsight_detection_test.launch.xml  gelsight_marker_detection_test.launch.xml  gelsight_tactile_system.launch.py  integrated_tactile_system.launch.xml  slide_along_cable.launch.py  slide_demo.launch.py  tactile_demo.launch.xml  tactile_detection.launch.xml
src/tension_control/scripts/: gripper_control.py  homing_routine_auto.sh
src/tension_control/src/: camera_publisher.py  camera_viewer.py  gelsight_camera_node.cpp  gelsight_detector_debug.py  gelsight_detector_visual.py  gelsight_marker_detector.py  gelsight_object_detection.py  move_homing.cpp  simple_tactile_demo.py  slide_along_cable_primitive.py  slide_cable_client.py  tactile_detection_debug.py  tactile_detection_service.py  tactile_object_detector.py  test_tactile_system.py
